--- a/css/signup-style.css
+++ b/css/signup-style.css
@@ -45,7 +45,7 @@ body {
 .container {
   width: 100%;
   height: 100vh;
-  background-image: url(../images/IMG_6452.PNG);
+  background-image: url('../images/IMG_6452.PNG');
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
