--- a/css/login-style.css
+++ b/css/login-style.css
@@ -36,11 +36,11 @@ img {
   max-width: 100%;
   height: auto;
 }
-
+/* 
 body {
-  /*background-color: var(--background-main-color);
-  */
-}
+background-color: var(--background-main-color);
+
+} */
 .container {
   width: 100%;
   height: 100vh;
