--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,15 +5,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- connect css file -->
-  <link rel="stylesheet" href="../css/home-style.css" />
+  <link rel="stylesheet" href="/css/home-style.css" />
 
   <!-- fontawesome -->
-  <link rel="stylesheet" href="../css/fontawesome/css/all.min.css" />
+  <link rel="stylesheet" href="/css/fontawesome/css/all.min.css" />
   <!-- Google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@300..900&display=swap" rel="stylesheet" />
-  <link rel="icon" href="../images/home.ico" />
+  <link rel="icon" href="/images/home.ico" />
   <title>YKPO Cafe</title>
 </head>
 
@@ -120,7 +120,7 @@
   <!-- end preloading -->
 
   <!-- connect javascript file -->
-  <script src="../js/home.js"></script>
+  <script src="/js/home.js"></script>
 </body>
 
 </html>
