--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SignUp</title>
     <!-- connect css file -->
-    <link rel="stylesheet" href="../css/signup-style.css" />
+    <link rel="stylesheet" href="/css/signup-style.css" />
     <!-- fontawesome -->
-    <link rel="stylesheet" href="../css/fontawesome/css/all.min.css" />
+    <link rel="stylesheet" href="/css/fontawesome/css/all.min.css" />
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -16,13 +16,13 @@
       rel="stylesheet"
     />
     <!-- icon -->
-    <link rel="icon" href="../images/home.ico" />
+    <link rel="icon" href="/images/home.ico" />
   </head>
   <body>
     <div class="container">
       <div class="signup-container">
         <h2 class="signup-title">YKPO Cafe</h2>
-        <form class="signup-form" method="post">
+        <form class="signup-form" action="/signup" method="post">
           <div class="name-container input-field-container">
             <i class="fa-solid fa-user"></i>
             <input
@@ -71,7 +71,7 @@
           </div>
           <input type="submit" value="signup" class="signup-btn" />
         </form>
-        <p>You have account ? <a href="login.html">Login</a></p>
+        <p>You have account ? <a href="login">Login</a></p>
       </div>
     </div>
     <div class="loader">
@@ -80,6 +80,6 @@
       <div class="three"></div>
     </div>
     <!-- connect javascript file -->
-    <script src="../js/signup.js"></script>
+    <script src="/js/signup.js"></script>
   </body>
 </html>
