--- a/css/login-style.css
+++ b/css/login-style.css
@@ -44,7 +44,7 @@ background-color: var(--background-main-color);
 .container {
   width: 100%;
   height: 100vh;
-  background-image: url('../images/IMG_6452.PNG');
+  background-image: url('/images/IMG_6452.PNG');
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
