--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- connect css file -->
-    <link rel="stylesheet" href="../css/menu-style.css" />
+    <link rel="stylesheet" href="/css/menu-style.css" />
 
     <!-- fontawesome -->
     <link rel="stylesheet" href="../css/fontawesome/css/all.min.css" />
@@ -181,7 +181,7 @@
     <!-- end preloading -->
 
     <!-- connect javascript file -->
-    <script src="../js/menu.js"></script>
+    <script src="/js/menu.js"></script>
 </body>
 
 </html>
