add controller for auth

--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -25,19 +25,19 @@
             <div class="links">
                 <i class="fa-solid fa-bars  burger-icon"></i>
                 <ul>
-                    <li><a href="home.html">Home</a></li>
-                    <li><a href="menu.html">Menu</a></li>
-                    <li><a href="home.html">About</a></li>
+                    <li><a href="home">Home</a></li>
+                    <li><a href="menu">Menu</a></li>
+                    <li><a href="home">About</a></li>
                     <li><a href="reservation.html">Book Table</a></li>
-                    <li class="login-phone-btn"><a href="login.html">Login</a></li>
+                    <li class="login-phone-btn"><a href="login">Login</a></li>
                     <li class="cart-phone-btn"><a href="cart.html"><i class="fa-solid fa-cart-shopping"> </i> Cart </a>
                     </li>
 
                 </ul>
             </div>
             <div class="right-header">
-                <a href="cart.html" class="cart-icon"> <i class="fa-solid fa-cart-shopping"></i></a>
-                <a href="login.html" class="login-icon">
+                <a href="cart" class="cart-icon"> <i class="fa-solid fa-cart-shopping"></i></a>
+                <a href="login" class="login-icon">
                     <i class="fa-regular fa-circle-user login-icon"></i>
                 </a>
             </div>
