--- a/views/home.ejs
+++ b/views/home.ejs
@@ -26,13 +26,13 @@
         <i class="fa-solid fa-bars  burger-icon"></i>
         <ul>
           <li><a href="#home">Home</a></li>
-          <li><a href="menu.html">Menu</a></li>
+          <li><a href="menu">Menu</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="reservation.html">Book Table</a></li>
-          <li class="login-phone-btn"><a href="login.html">Login</a></li>
+          <li><a href="reservation">Book Table</a></li>
+          <li class="login-phone-btn"><a href="login">Login</a></li>
         </ul>
       </div>
-      <a href="login.html" class="login-icon">
+      <a href="login" class="login-icon">
         <i class="fa-regular fa-circle-user login-icon"></i>
       </a>
     </div>
@@ -42,7 +42,7 @@
   <div class="home-container" id="home">
     <div class="home-left">
       <p>tasted flavors from around the world</p>
-      <a href="menu.html" class="order-btn"> Order Now <i class="fa-solid fa-utensils"></i></a>
+      <a href="menu" class="order-btn"> Order Now <i class="fa-solid fa-utensils"></i></a>
     </div>
     <div class="home-right"></div>
   </div>
@@ -77,7 +77,7 @@
           hygienic place
         </div>
       </div>
-      <a href="reservation.html">Book Your Table</a>
+      <a href="reservation">Book Your Table</a>
     </div>
   </div>
   <!-- end about section -->
