--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,61 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login</title>
-    <!-- connect css file -->
-    <link rel="stylesheet" href="/css/login-style.css"/>
-     <!-- fontAwesome -->
-     <link rel="stylesheet" href="/css/fontawesome/css/all.min.css" />
-    <!-- Google fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Merienda:wght@300..900&display=swap"
-      rel="stylesheet"
-    />
-    <!-- icon -->
-    <link rel="icon" href="/images/home.ico" />
-  </head>
-  <body>
-    <div class="container">
-      <div class="login-container">
-        <h2 class="login-title">YKPO Cafe</h2>
-        <form class="login-form" action="/login" method="post">
-          <div class="email-container">
-            <i class="fa-solid fa-user"></i>
-            <input
-              type="email"
-              name="email"
-              class="email"
-              placeholder="Email"
-              autocomplete="off"
-              required
-            />
-          </div>
-          <div class="password-container">
-            <i class="fa-solid fa-key"></i>
-            <input
-              type="password"
-              name="password"
-              class="password"
-              placeholder="Password"
-              autocomplete="off"
-              required
-            />
-          </div>
-          <input type="submit" value="Login" class="login-btn" />
-        </form>
-        <p>Doesn't have account ? <a href="signup">Signup</a></p>
-      </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Login</title>
+  <!-- connect css file -->
+  <link rel="stylesheet" href="/css/login-style.css" />
+  <!-- fontAwesome -->
+  <link rel="stylesheet" href="/css/fontawesome/css/all.min.css" />
+  <!-- Google fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@300..900&display=swap" rel="stylesheet" />
+  <!-- icon -->
+  <link rel="icon" href="/images/home.ico" />
+</head>
+
+<body>
+  <div class="container">
+    <div class="login-container">
+      <h2 class="login-title">YKPO Cafe</h2>
+      <form class="login-form" action="/login" method="post">
+        <div class="email-container">
+          <i class="fa-solid fa-user"></i>
+          <input type="email" name="email" class="email" placeholder="Email" autocomplete="off" required />
+        </div>
+        <div class="password-container">
+          <i class="fa-solid fa-key"></i>
+          <input type="password" name="password" class="password" placeholder="Password" autocomplete="off" required />
+        </div>
+        <input type="submit" value="Login" class="login-btn" />
+      </form>
+      <p>Doesn't have account ? <a href="signup">Signup</a></p>
     </div>
-    <div class="loader">
-      <div class="one"></div>
-      <div class="two"></div>
-      <div class="three"></div>
-    </div>
-    <!-- connect javascript file -->
-    <script src="/js/login.js"></script>
-  </body>
+  </div>
+  <div class="loader">
+    <div class="one"></div>
+    <div class="two"></div>
+    <div class="three"></div>
+  </div>
+  <!-- connect javascript file -->
+  <script src="/js/login.js"></script>
+</body>
+
 </html>
